Add Japanese text normalization aligned with miotts_server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(miotts
     src/main.cpp
     src/miocodec.cpp
     src/istft.cpp
+    src/text-normalize.cpp
     src/token-parser.cpp
     src/wav-writer.cpp
 )
