--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,3 +80,25 @@ target_link_libraries(miotts-stream-benchmark PRIVATE
     ggml
     m
 )
+
+add_executable(miotts-stream-compare
+    examples/stream-compare.cpp
+    src/miocodec.cpp
+    src/istft.cpp
+    src/text-normalize.cpp
+    src/test-to-speech.cpp
+    src/token-parser.cpp
+    src/wav-writer.cpp
+)
+
+target_include_directories(miotts-stream-compare PRIVATE
+    src
+    third_party/llama.cpp/include
+    third_party/llama.cpp/ggml/include
+)
+
+target_link_libraries(miotts-stream-compare PRIVATE
+    llama
+    ggml
+    m
+)
