--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "soundfile>=0.13.1",
     "torch>=2.10.0",
     "torchaudio>=2.10.0",
+    "transformers>=5.2.0",
 ]
 
 [tool.uv.sources]
